<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TableRow
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/design_default_color_primary_dark"
       >

       <TextView
           android:text="@string/radioButtontablelayout"
           android:layout_span="2"
           android:textColor="@color/black"
           android:textSize="20sp"
           />

   </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:layout_column="0"
            android:text="@string/firstname"
            android:layout_span="2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/f_name"
            android:hint="@string/enter_the_first_name"
            android:inputType="text"
            android:textSize="20sp"
            android:importantForAutofill="no"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:text="@string/lastname"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/l_name"
            android:hint="@string/enter_the_last_name"
            android:inputType="text"
            android:textSize="20sp"
            android:importantForAutofill="no"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/address"
            android:hint="@string/enter_the_last_name"
            android:inputType="text"
            android:textSize="20sp"
            android:importantForAutofill="no"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:text="@string/Phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/phone"
            android:hint="@string/enter_the_phoneno"
            android:inputType="number"
            android:textSize="20sp"
            android:importantForAutofill="no"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/email"
            android:hint="@string/enter_the_email"
            android:inputType="text"
            android:textSize="20sp"
            android:importantForAutofill="no"/>

    </TableRow>
    <TableRow>
        <RadioButton
            android:id="@+id/M"
            android:text="@string/Male"/>

    </TableRow>
    <TableRow>
    <RadioButton
        android:id="@+id/f"
        android:text="@string/Female"/>


</TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_submit"
            android:text="@string/submit"/>
        <Button
            android:id="@+id/btn_clear"
            android:text="@string/clear"/>
    </TableRow>

</TableLayout>